<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width = "match_parent"
    android:layout_height = "match_parent">

    <ImageButton
        android:id = "@+id/Rotate_Right"
        android:layout_width = "100dp"
        android:layout_height = "100dp"
        android:onClick = "Rotate_Right_onClick"
        android:background = "@drawable/right"
        app:layout_constraintBottom_toBottomOf = "parent"
        app:layout_constraintStart_toStartOf = "parent"
        android:contentDescription = "@string/rotate_right" />

    <ImageButton
        android:id = "@+id/under"
        android:layout_width = "0dp"
        android:layout_height = "100dp"
        android:onClick = "Under_onClick"
        app:layout_constraintBottom_toBottomOf = "parent"
        android:background = "@drawable/under"
        app:layout_constraintEnd_toStartOf = "@+id/Rotate_Left"
        app:layout_constraintStart_toEndOf = "@+id/Rotate_Right"
        android:contentDescription = "@string/move_block_down" />

    <ImageButton
        android:id = "@+id/Rotate_Left"
        android:layout_width = "100dp"
        android:layout_height = "100dp"
        android:onClick = "Rotate_Left_onClick"
        android:background = "@drawable/left"
        app:layout_constraintBottom_toBottomOf = "parent"
        app:layout_constraintEnd_toEndOf = "parent"
        android:contentDescription = "@string/rotate_left" />

    <com.example.blockforce.Draw
        android:id = "@+id/view"
        android:layout_width = "0dp"
        android:layout_height = "0dp"
        android:layout_marginBottom = "100dp"
        app:layout_constraintBottom_toBottomOf = "parent"
        app:layout_constraintEnd_toEndOf = "parent"
        app:layout_constraintHorizontal_bias = "0.0"
        app:layout_constraintStart_toStartOf = "parent"
        app:layout_constraintTop_toTopOf = "parent"
        app:layout_constraintVertical_bias = "0.0" />



    <TextView
        android:id = "@+id/nextView"
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:layout_marginStart = "110dp"
        android:text = "@string/next"
        android:textColor = "#FFFFFF"
        app:layout_constraintStart_toStartOf = "parent"
        app:layout_constraintTop_toTopOf = "parent" />

    <TextView
        android:id = "@+id/SpecialFormView"
        android:layout_width = "100dp"
        android:layout_height = "wrap_content"
        android:layout_marginStart = "120dp"
        android:gravity = "center"
        android:text = "@string/after_n20turns"
        app:layout_constraintStart_toEndOf = "@+id/nextView"
        app:layout_constraintTop_toTopOf = "parent" />

    <TextView
        android:id = "@+id/Level"
        android:layout_width = "50dp"
        android:layout_height = "50dp"
        android:gravity = "center"
        android:textSize = "20sp"
        app:layout_constraintStart_toStartOf = "parent"
        app:layout_constraintTop_toTopOf = "parent" />

    <TextView
        android:id = "@+id/Lines"
        android:layout_width = "50dp"
        android:layout_height = "50dp"
        android:gravity = "center"
        android:textSize = "20sp"
        app:layout_constraintStart_toEndOf = "@+id/Level"
        app:layout_constraintTop_toTopOf = "parent" />



</androidx.constraintlayout.widget.ConstraintLayout>